LLMAI-82: The vector index isn't wiki-aware
* Add a wiki field to the vector index and the Chunk class.
* Add wiki and collection to the id field.
* Set the wiki field when indexing new content.
* Set the wiki field when querying documents, but also still return chunks without the wiki field set.
* Refactor the code to re-use constants.